<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.nrojiani.bartender.views.search.SearchFragment"
        android:label="@string/title_search_fragment"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_searchFragment_to_drinkFragment"
            app:destination="@id/drinkFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/drinkFragment"
        android:name="com.nrojiani.bartender.views.drink.DrinkFragment"
        android:label="@string/title_drink_fragment"
        tools:layout="@layout/drink_fragment">
        <argument
            android:name="drinkRef"
            app:argType="com.nrojiani.bartender.data.domain.DrinkRef"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_drinkFragment_to_ingredientFragment"
            app:destination="@id/ingredientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/ingredientFragment"
        android:name="com.nrojiani.bartender.views.ingredient.IngredientFragment"
        android:label="@string/title_ingredient_fragment"
        tools:layout="@layout/ingredient_fragment">
        <argument
            android:name="ingredientName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.nrojiani.bartender.views.favorites.FavoritesFragment"
        android:label="Favorites"
        tools:layout="@layout/favorites_fragment" />

</navigation>