<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="drinkViewModel"
            type="com.nrojiani.bartender.viewmodels.DrinkViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.drink.DrinkFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="parent"
                app:loadingIndicator="@{drinkViewModel.drinkResource}" />

            <ImageView
                android:id="@+id/drink_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/content_description_drink_image"
                app:imageUrl="@{drinkViewModel.drinkRef.imageUrl}"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/drink_image_placeholder" />

            <TextView
                android:id="@+id/drink_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:text="@{drinkViewModel.drinkRef.drinkName}"
                android:textAppearance="@style/TextAppearance.H1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drink_image"
                tools:text="Mojito Long Name Mojito Long Name" />

            <TextView
                android:id="@+id/ingredients_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.H2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drink_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_header">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/ingredients_instructions_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/instructions_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_list" />

            <TextView
                android:id="@+id/instructions_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/instructions_title"
                android:textAppearance="@style/TextAppearance.H2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_instructions_divider" />

            <TextView
                android:id="@+id/glass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{@string/glass_with_label(drinkViewModel.glass)}"
                android:textAppearance="@style/TextAppearance.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructions_header"
                app:visibleOnSuccess="@{drinkViewModel.drinkResource}"
                tools:text="@string/placeholder_glass_text" />

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/double_margin"
                android:text="@{drinkViewModel.instructions}"
                android:textAppearance="@style/TextAppearance.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glass_text"
                app:visibleOnSuccess="@{drinkViewModel.drinkResource}"
                tools:text="@string/placeholder_drink_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>